# KNN-number-detection

./: CMakeLists.txt  README.md
src/: KNN_number_detection.cpp  KNN_number_detection.h
src/NumberTrain/: NumberTrain  NumberTrain.cpp  NumberTrain.h  bpModel1 (128澶嶄欢).xml  bpModel1.xml  bpModel2.xml  bpModel_op.xml  changemode  changemode.cpp  data(opt).txt  data1(128) (numberBlack).txt  data1(128)(numberWhite).txt  data2(128) (numberBlack).txt  data2(128)(numberWhite).txt  label.txt
src/backup/: finish_main.cpp  newmain.cpp  oldmain.cpp  simplemain.cpp
src/test/: testNumDetcetion.cpp
